corrected responsive video and pdf, cleaned code format

--- a/events.html
+++ b/events.html
@@ -19,7 +19,6 @@
 
 <body>
     <div class="container-fluid">
-
         <div class="row">
             <div class="col-12">
                 <!--Navigation bar-->
@@ -63,13 +62,15 @@
         <div class="row-col-12">
             <article class="mt-4 p-2">
                 <h1 class="p-2">Les événements du club</h1>
-                <p>Contests de skate, journée d'Halloween, concerts ... Retrouvez ici tous les événements organisés par
-                    l'association. N'hésitez pas
-                    à remplir notre formulaire d'inscription afin de compter parmis les prochains participants aux
-                    différents contests de Skateboard.
+                <p>Contests de skate, journée d'Halloween, concerts ...
+                    Retrouvez ici tous les événements organisés par l'association.
+                    N'hésitez pas à remplir notre formulaire d'inscription afin de
+                    compter parmis les prochains participants aux différents
+                    contests de Skateboard.
                 </p>
             </article>
         </div>
+
         <!--card event n°1-->
         <div class="row">
             <div class="col-12 col-lg-6">
@@ -86,14 +87,16 @@
                             Le 05 Juin 2021
                         </p>
                         <p class="card-text my-3">
-                            Journée pleine d'animations prévue au skate-park pour les jeunes de 7 à 18 ans. Au
-                            programme: contests de skateboard
-                            pour toutes catégories (7/11ans, 12/14 ans, 15/18 ans et filles). Enormément de lots à
-                            gagner, offerts gracieusement
-                            par nos multiples sponsors. Mais aussi: buvette, restauration sur place le midi. A 18h15,
-                            vous pourrez assister à la
-                            remise des prix, puis, un DJ vous divertira jusqu'à la nuit tombée. <br> <i>Incription : 5€,
-                                sur place dès 11h.</i>
+                            Journée pleine d'animations prévue au skate-park
+                            pour les jeunes de 7 à 18 ans. Au programme:
+                            contests de skateboard pour toutes catégories
+                            (7/11ans, 12/14 ans, 15/18 ans et filles).
+                            Enormément de lots à gagner, offerts gracieusement
+                            par nos multiples sponsors. Mais aussi: buvette,
+                            restauration sur place le midi. A 18h15, vous
+                            pourrez assister à la remise des prix, puis, un DJ
+                            vous divertira jusqu'à la nuit tombée. <br>
+                            <i>Incription : 5€, sur place dès 11h.</i>
                         </p>
                         <p class="card-text my-3">
                             <i class="bi bi-envelope-fill"></i>
@@ -104,6 +107,7 @@
                     </div>
                 </div>
             </div>
+
             <!--card event n°2-->
             <div class="col-12 col-lg-6">
                 <div class="card mt-3">
@@ -119,38 +123,41 @@
                             Le 28 Mars 2021
                         </p>
                         <p class="card-text my-3">
-                            De <b>18h à minuit</b> au Skate-Park de Crest, venez vous affronter dans un contest de skate ! Différentes catégories
-                            seront récompensées, parmis lesquelles: le plus long Ollie ou encore le meilleur "tricks". Pour vous accompagner, un DJ jouera
-                            toute la soirée, et comme d'habitude, vous pourrez vous rafraîchir à notre buvette. L'inscription est requise pour participer,
+                            De <b>18h à minuit</b> au Skate-Park de Crest, venez vous affronter dans un contest de skate
+                            ! Différentes catégories
+                            seront récompensées, parmis lesquelles: le plus long Ollie ou encore le meilleur "tricks".
+                            Pour vous accompagner, un DJ jouera
+                            toute la soirée, et comme d'habitude, vous pourrez vous rafraîchir à notre buvette.
+                            L'inscription est requise pour participer,
                             mais gratuite, alors n'hésitez pas à venir montrer vos talents de skateur !!
                         </p>
                         <p class="card-text my-3">
                             <i class="bi bi-envelope-fill"></i>
                             <a href="mailto:crestskateboardclub@gmail.com">crestskateboardclub@gmail.com</a>
                         </p>
-                        <button class="btn cardButton disabled" type="button" >Evénement passé</button>
+                        <button class="btn cardButton disabled" type="button">Evénement passé</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
+
         <!--Ad for event of the club-->
-        <div class="col-12 col-lg-6">
+        <div class="col-lg-6">
             <aside class="d-flex justify-content-center mt-3">
                 <img id="eventAd" src="images/AG.png" alt="pub pour l'assemblée générale de l'association">
             </aside>
         </div>
+
         <!--Ad for event of another club-->
-        <div class="col-12 col-lg-6">
+        <div class="col-lg-6">
             <aside class="mt-3 d-flex justify-content-center">
                 <img id="eventAd" src="images/pub-event-asso.png"
                     alt="pub pour un événement d'une autre association de skateboard">
             </aside>
         </div>
     </div>
-
 
     <!--Modal window with registration form -->
     <div class="modal" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="modalForm" aria-hidden="true">
@@ -196,8 +203,8 @@
         </div>
     </div>
 
-       <!--Footer-->
-       <footer class="text-center mt-4">
+    <!--Footer-->
+    <footer class="text-center mt-4">
         <div class="container-fluid p-4">
             <div class="row p-4 d-flex  justify-content-lg-around">
                 <div class="col-lg-3 mb-4">
@@ -207,13 +214,14 @@
                     <p>Association de skateboard, à Crest (26).</p>
                     <ul class="list-inline justify-content-center">
                         <li class="list-inline-item p-2">
-                            <a href="https://www.facebook.com/CrestSkateboardClub"><i class="bi bi-facebook fs-2"></i></a>
+                            <a href="https://www.facebook.com/CrestSkateboardClub"><i
+                                    class="bi bi-facebook fs-2"></i></a>
                         </li>
                         <li class="list-inline-item p-2">
-                            <a href="https://www.instagram.com/crestskateboardclub/"><i class="bi bi-instagram fs-2"></i></a>
+                            <a href="https://www.instagram.com/crestskateboardclub/"><i
+                                    class="bi bi-instagram fs-2"></i></a>
                         </li>
                     </ul>
-
                 </div>
                 <div class="col-lg-3 mb-4 ">
                     <ul class="list-unstyled">
@@ -231,10 +239,8 @@
                         </li>
                     </ul>
                 </div>
-
                 <div class="col-lg-3 mb-4 mb-md-0">
                     <h5 class="text-uppercase mb-4">Contact</h5>
-
                     <ul class="list-unstyled">
                         <li>
                             <p><i class="bi bi-geo-alt-fill pe-2"></i>Quai Soubeyran 26400 CREST</p>
