--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 <body>
     <div class="container-fluid">
-
         <div class="row">
             <div class="col-12">
                 <!--Navigation bar-->
@@ -114,14 +113,17 @@
                 <div class="col-12">
                     <article class="mt-3 p-2">
                         <h1 class="p-2">La passion du Skateboard</h1>
-                        <p>Le Crest Skateboard Club est une association crée le 26 Octobre 2016 et ayant pour but de
-                            promouvoir le Skateboard. Nous cherchons avant tout à offrir aux jeunes de Crest et des
-                            alentours, un endroit sécurisé et bienveillant pour l'apprentissage de ce sport.
-                            Le Skateboard Club de Crest est une association vivante. En effet, nous proposons
-                            régulièrement
-                            des événements afin de réunir grands et petits autour de la même passion du skate.
-                            Nos cours sont proposés par des moniteurs diplômés du Brevet d'Initiateur Fédéral opriton
-                            Skateboard.
+                        <p>Le Crest Skateboard Club est une association crée le
+                        26 Octobre 2016 et ayant pour but de promouvoir le
+                        Skateboard. Nous cherchons avant tout à offrir aux
+                        jeunes de Crest et des alentours, un endroit sécurisé et
+                        bienveillant pour l'apprentissage de ce sport. Le
+                        Skateboard Club de Crest est une association vivante. En
+                        effet, nous proposons régulièrement des événements afin
+                        de réunir grands et petits autour de la même passion du
+                        skate. Nos cours sont proposés par des moniteurs
+                        diplômés du Brevet d'Initiateur Fédéral opriton
+                        Skateboard.
                         </p>
                     </article>
                 </div>
@@ -135,11 +137,11 @@
                         <div class="card-body">
                             <h3 class="card-title">Les Cours</h3>
                             <p class="card-text my-3">
-                                Retrouvez les horaires et tarifs de nos cours de Skateboard. Deux groupes sont
-                                distingués:
-                                "Jusqu'à 9 ans" et "A partir de 10 ans" pour plus de facilité. Nous vous présentons
-                                également l'intégralité de notre équipe de
-                                moniteurs.
+                                Retrouvez les horaires et tarifs de nos cours de
+                                Skateboard. Deux groupes sont distingués:
+                                "Jusqu'à 9 ans" et "A partir de 10 ans" pour
+                                plus de facilité. Nous vous présentons également
+                                l'intégralité de notre équipe de moniteurs.
                             </p>
                             <a href="#" class="btn cardButton">Accéder aux cours ...</a>
                         </div>
@@ -152,10 +154,12 @@
                         <div class="card-body">
                             <h3 class="card-title">Nos Evénements</h3>
                             <p class="card-text my-3">
-                                Retrouvez tous nos événements passés ou à venir ! Concerts, contests de Skateboard,
-                                journée spécial Kidz... Il y en a pour tous les goûts.
-                                Participer aux événements du club c'est à la fois profiter un moment de partage et de
-                                bonne humeur, mais aussi soutenir l'association !
+                                Retrouvez tous nos événements passés ou à venir
+                                ! Concerts, contests de Skateboard, journée
+                                spécial Kidz... Il y en a pour tous les goûts.
+                                Participer aux événements du club c'est à la
+                                fois profiter un moment de partage et de bonne
+                                humeur, mais aussi soutenir l'association !
                             </p>
                             <a href="events.html" class="btn cardButton">Accéder aux événements ...</a>
                         </div>
@@ -167,9 +171,11 @@
                         <div class="card-body">
                             <h3 class="card-title">Les actualités de l'association</h3>
                             <p class="card-text my-3">
-                                Ici, vous pouvez retrouver toutes nos actualités ! Des nouveaux moniteurs à l'Assemblée
-                                Générale de l'association, en passant par nos divers projets pour le
-                                Skatepark en liens avec la Mairie de Crest.
+                                Ici, vous pouvez retrouver toutes nos actualités
+                                ! Des nouveaux moniteurs à l'Assemblée Générale
+                                de l'association, en passant par nos divers
+                                projets pour le Skatepark en liens avec la
+                                Mairie de Crest.
                             </p>
                             <a href="#" class="btn cardButton">Accéder aux actualités ...</a>
                         </div>
@@ -177,34 +183,38 @@
                 </div>
             </div>
 
-
             <!--article video -->
             <div class="row">
                 <div class="col-12 col-lg-6">
                     <article class="mt-3 p-2" id="meetTheClub">
                         <h2 class="p-2">Rencontre avec le Skate Club</h2>
-                        <video width="390" controls>
-                            <source src="images/video-skate-club.mp4" type="video/mp4">
-                            <source src="images/video-skate-club.webm" type="video/webm">
-                            Toutes nos excuses, votre navigateur ne permet pas l'affichage de cette vidéo.
-                        </video>
-                        <p>Vidéo par "Le Bec Magazine", tournée en 2019.</p>
+                        <div class="d-flex justify-content-center ratio ratio-16x9">
+                            <video controls>
+                                <source src="images/video-skate-club.mp4" type="video/mp4">
+                                <source src="images/video-skate-club.webm" type="video/webm">
+                                Toutes nos excuses, votre navigateur ne permet pas l'affichage de cette vidéo.
+                            </video>
+                        </div>
+                            <p class="mt-3">Vidéo par "Le Bec Magazine", tournée en 2019.</p>
                     </article>
                 </div>
+
                 <!--Article general assembly report-->
                 <div class="col-12 col-lg-6">
                     <article class="mt-3 p-2">
                         <h2 class="p-2">Bilan de l'Assemblée Générale</h2>
-                        <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" width="390"
-                            height="350"></object>
-                        <p>Voici le Bilan Moral suite à l'Assemblée Générale qui s'est tenue le 29 Octobre 2021.</p>
+                        <div class="d-flex justify-content-center ratio ratio-16x9">
+                        <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" 
+                            ></object>
+                            </div>
+                        <p class="mt-3">Voici le Bilan Moral suite à l'Assemblée Générale qui s'est tenue le 29 Octobre 2021.</p>
                     </article>
                 </div>
         </main>
 
         <!--Footer-->
         <footer class="text-center mt-4">
-            <div class="container-fluid p-4">
+            <div class="container-fluid pt-4">
                 <div class="row p-4 d-flex  justify-content-lg-around">
                     <div class="col-lg-3 mb-4">
                         <div class="align-items-center mb-5 mx-auto">
@@ -219,9 +229,8 @@
                                 <a href="https://www.instagram.com/crestskateboardclub/"><i class="bi bi-instagram fs-2"></i></a>
                             </li>
                         </ul>
-
                     </div>
-                    <div class="col-lg-3 mb-4 ">
+                    <div class="col-lg-3 mb-4">
                         <ul class="list-unstyled">
                             <li class="mb-2 mb-lg-4">
                                 <a href="index.html" aria-current="page">Accueil</a>
@@ -237,10 +246,8 @@
                             </li>
                         </ul>
                     </div>
-
-                    <div class="col-lg-3 mb-4 mb-md-0">
+                    <div class="col-lg-3">
                         <h4 class="text-uppercase mb-4">Contact</h4>
-
                         <ul class="list-unstyled">
                             <li>
                                 <p><i class="bi bi-geo-alt-fill pe-2"></i>Quai Soubeyran 26400 CREST</p>
@@ -259,7 +266,6 @@
                 <p>© 2021 - Tous droits réservés <br> Site web développé par Louise Le Ray</p>
             </div>
         </footer>
-
 
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
