--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
                     <article class="mt-3 p-2">
                         <h2 class="p-2">Bilan de l'Assemblée Générale</h2>
                         <div class="d-flex justify-content-center ratio ratio-16x9">
-                        <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" 
-                            ></object>
+                        <object id="pdfDoc" type="application/pdf" data="images/Bilan moral.pdf" >Toutes nos excuses, votre naviguateur ne permet pas d'afficher ce fichier.</object>
                             </div>
                         <p class="mt-3">Voici le Bilan Moral suite à l'Assemblée Générale qui s'est tenue le 29 Octobre 2021.</p>
                     </article>
