--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <!--Presentation-->
         <main>
             <div class="row">
-                <div class="col-12">
+                <div class="col-10 offset-1">
                     <article class="mt-3 p-2">
                         <h1 class="p-2">La passion du Skateboard</h1>
                         <p>Le Crest Skateboard Club est une association crée le
@@ -133,8 +133,9 @@
             </div>
 
             <!--Cards to present the different pages-->
-            <div class="row">
-                <div class="col-12 col-lg-4">
+            <section id="cards">
+            <div class="row d-flex justify-content-center mb-5">
+                <div class="col-sm-10 col-md-4">
                     <div class="card mt-3">
                         <img id="imgCard" src="images/cours-card.png" class="card-img-top" alt="un élève du club">
                         <div class="card-body">
@@ -150,7 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-sm-10 col-md-4">
                     <div class="card mt-3">
                         <img id="imgCard" src="images/evenementsCard.png" class="card-img-top"
                             alt="un événement du club">
@@ -158,8 +159,7 @@
                             <h3 class="card-title">Nos Evénements</h3>
                             <p class="card-text my-3">
                                 Retrouvez tous nos événements passés ou à venir
-                                ! Concerts, contests de Skateboard, journée
-                                spécial Kidz... Il y en a pour tous les goûts.
+                                ! Concerts, contests de Skateboard... Il y en a pour tous les goûts.
                                 Participer aux événements du club c'est à la
                                 fois profiter un moment de partage et de bonne
                                 humeur, mais aussi soutenir l'association !
@@ -168,7 +168,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-lg-4">
+                <div class="col-sm-10 col-md-4">
                     <div class="card mt-3">
                         <img id="imgCard" src="images/skatepark.png" class="card-img-top" alt="">
                         <div class="card-body">
@@ -185,10 +185,11 @@
                     </div>
                 </div>
             </div>
+            </section>
 
             <!--article video -->
-            <div class="row">
-                <div class="col-12 col-lg-6">
+            <div class="row d-flex justify-content-center">
+                <div class="col-12 col-lg-5">
                     <article class="mt-3 p-2" id="meetTheClub">
                         <h2 class="p-2">Rencontre avec le Skate Club</h2>
                         <div class="d-flex justify-content-center ratio ratio-16x9">
@@ -203,7 +204,7 @@
                 </div>
 
                 <!--Article general assembly report-->
-                <div class="col-12 col-lg-6">
+                <div class="col-12 col-lg-5">
                     <article class="mt-3 p-2">
                         <h2 class="p-2">Bilan de l'Assemblée Générale</h2>
                         <div class="d-flex justify-content-center ratio ratio-16x9">
@@ -217,7 +218,7 @@
         </main>
 
         <!--Footer-->
-        <footer class="text-center mt-4">
+        <footer class="text-center">
             <div class="container-fluid pt-4">
                 <div class="row p-4 d-flex  justify-content-lg-around">
                     <div class="col-lg-3 mb-4">
