--- a/events.html
+++ b/events.html
@@ -63,8 +63,9 @@
                 </nav>
             </div>
         </div>
-        <div class="row-col-12">
-            <article class="mt-4 p-2">
+        <div class="row">
+        <div class="col-10 offset-1">
+            <article class="my-5 p-2">
                 <h1 class="p-2">Les événements du club</h1>
                 <p>Contests de skate, journée d'Halloween, concerts ...
                     Retrouvez ici tous les événements organisés par l'association.
@@ -74,10 +75,11 @@
                 </p>
             </article>
         </div>
+        </div>
 
         <!--card event n°1-->
-        <div class="row">
-            <div class="col-12 col-lg-6">
+        <div class="row d-flex justify-content-center">
+            <div class="col-sm-10 col-md-5 offset-1">
                 <div class="card mt-3">
                     <h2 class="card-title p-2">La journée "Skate Kids"</h2>
                     <img src="images/skateKidz.png" class="card-img-top" alt="affiche de l'événement SkateKids">
@@ -113,7 +115,7 @@
             </div>
 
             <!--card event n°2-->
-            <div class="col-12 col-lg-6">
+            <div class="col-sm-10 col-md-5">
                 <div class="card mt-3">
                     <h2 class="card-title p-2">Le Local Crash Constest</h2>
                     <img src="images/localCrashContest.png" class="card-img-top" alt="affiche de l'événement SkateKids">
@@ -145,18 +147,18 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row d-flex justify-content-center">
 
         <!--Ad for event of the club-->
-        <div class="col-lg-6">
-            <aside class="d-flex justify-content-center mt-3">
+        <div class="col-md-5 offset-1">
+            <aside class="mt-5">
                 <img id="eventAd" src="images/AG.png" alt="pub pour l'assemblée générale de l'association">
             </aside>
         </div>
 
         <!--Ad for event of another club-->
-        <div class="col-lg-6">
-            <aside class="mt-3 d-flex justify-content-center">
+        <div class="col-md-5">
+            <aside class="mt-5">
                 <img id="eventAd" src="images/pub-event-asso.png"
                     alt="pub pour un événement d'une autre association de skateboard">
             </aside>
@@ -208,7 +210,7 @@
     </div>
 
     <!--Footer-->
-    <footer class="text-center mt-4">
+    <footer class="text-center">
         <div class="container-fluid p-4">
             <div class="row p-4 d-flex  justify-content-lg-around">
                 <div class="col-lg-3 mb-4">
